--- a/assets/src/styles/_post.scss
+++ b/assets/src/styles/_post.scss
@@ -1,7 +1,8 @@
 // ############################################################################
-// Home
+// Posts
 // ############################################################################
 
-.sal-home {
+.sal-post {
+
 
 }
