--- a/assets/src/styles/screen.scss
+++ b/assets/src/styles/screen.scss
@@ -6,21 +6,14 @@
 @import "layout";
 @import "patterns";
 
+// Special
+@import "ghost";
+
 // Components
 @import "components/footer";
 @import "components/navigation";
 @import "components/masthead";
-@import "components/obi";
-@import "components/grid";
-@import "components/quote";
-@import "components/counters";
-@import "components/cards";
-@import "components/card";
-@import "components/newsletter";
-@import "components/blog";
-@import "components/buttons";
-@import "components/profile";
-@import "components/team-grid";
-@import "components/subscribe";
+// @import "components/card";
+// @import "components/blog";
+// @import "components/buttons";
 @import "components/sidebar";
-@import "components/roi";
