--- a/partials/sidebar-search.hbs
+++ b/partials/sidebar-search.hbs
@@ -2,7 +2,7 @@
   <h3>Search</h3>
   <form>
     <input type="text" id="search-field" />
-    <button type="submit" class="mz-button mz-button--secondary">Search</button>
+    <button type="submit" class="button button--secondary">Search</button>
   </form>
   <div id="results" class="sidebar__results"></div>
 </section>
