--- a/assets/src/styles/_config.scss
+++ b/assets/src/styles/_config.scss
@@ -2,11 +2,11 @@
 // Global fonts
 // ############################################################################
 
-$base-font: 'PT Sans', sans-serif;
-$base-font-body: 'PT Sans', sans-serif;
-$base-font-bold: 'PT Sans', sans-serif;
-$base-font-medium: 'PT Sans', sans-serif;
-$base-font-heading: 'PT Sans Narrow', sans-serif;
+$base-font: 'Noto Serif', serif;
+$base-font-body: 'Noto Serif', serif;
+$base-font-bold: 'Noto Serif', serif;
+$base-font-medium: 'Noto Serif', serif;
+$base-font-heading: 'Sanchez', serif;
 
 // ############################################################################
 // Typography
