--- a/assets/src/styles/components/_sidebar.scss
+++ b/assets/src/styles/components/_sidebar.scss
@@ -1,15 +1,37 @@
 .sidebar {
   position: relative;
-
   margin: 2rem;
+  border-top: 1px solid $color-border;
 
   @include small {
     margin: 0;
+    padding-left: 1rem;
+    border-top: 0;
+    border-left: 1px dashed $color-border;
   }
 
-  section {
+  &__logo {
+    max-width: 64px;
+    margin: 0 auto;
+
+    @include small {
+      max-width: 128px;
+    }
+  }
+
+  &__title {
+    padding: 0.5rem 0;
+    text-align: center;
+
+    h2 {
+      font-size: 1.5rem;
+    }
+  }
+
+  &__section {
+    border-top: 1px solid $color-border;
     margin-bottom: 2rem;
-    padding-right: 1rem;
+    padding-top: 2rem;
   }
 
   form {
@@ -80,7 +102,7 @@
   }
 
   &__tags {
-    
+
     .tags {
 
       li {
