--- a/error-404.hbs
+++ b/error-404.hbs
@@ -1,26 +1,13 @@
 {{!< default}}
 
-<div class="wrapper">
-
-  {{navigation}}
-
-  <section class="lane">
-    <div class="lane__wrap">
-      <div class="lane__content">
-        <h2>404 - Page Missing</h2>
-        <h3>The page you are looking for has gone away. Sorry about that.</h3>
-      </div>
+<div class="sal__lane">
+  <div class="split-uneven">
+    <div>
+      <h1>404 - Page Missing</h1>
+      <p>The page you are looking for has gone away. Sorry about that.</p>
     </div>
-  </section>
 
-  <div class="lane lane--spacer">
-    <div class="lane__wrap">
-      <div class="lane__content">
-        {{> contact}}
-      </div>
-    </div>
+    {{>sidebar}}
+
   </div>
-
-  {{> latest-posts}}
-
 </div>
