--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,6 +1,6 @@
-<div class="sff__lane">
-  <div class="sff__single">
-    <footer class="sff__footer">
+<div class="sal__lane">
+  <div class="sal__single">
+    <footer class="sal-footer">
       <p>Made with love in Scotland | Copyright &copy; {{date format="YYYY"}}</p>
     </footer>
   </div>
