--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -12,7 +12,7 @@
     </div>
 
     <div class="sidebar__description">
-      {{@site.description}}
+      <p>{{@site.description}}</p>
     </div>
   </div>
 
