--- a/assets/src/styles/components/_navigation.scss
+++ b/assets/src/styles/components/_navigation.scss
@@ -10,8 +10,14 @@
   justify-content: space-between;
 
   &__logo {
-    max-width: 64px;
+    width: 90px;
     margin: 0 auto;
+
+    @include small {
+      position: absolute;
+      top: 0;
+      width: 90px;
+    }
   }
 
   &__title {
