--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,5 +1,11 @@
 <nav class="navigation">
 
+  <div class="navigation__logo">
+    <a class="navigation__logo-link" href="/">
+      <img src="{{@site.logo}}" alt="{{@site.title}} logo" />
+    </a>
+  </div>
+
   <div class="navigation__title">
     {{@site.title}}
   </div>
