--- a/page.hbs
+++ b/page.hbs
@@ -1,16 +1,16 @@
 {{!< default}}
 
-<div class="sff__lane">
-  <div class="sff__single">
-      <div class="sff__panel">
-      {{#post}}
-        <div class="sff__content"></div>
-          <h1>{{title}}</h1>
-
-          {{content}}
-
+<div class="sal-split-uneven">
+  <div>
+    <div class="lane">
+      <div class="panel content">
+        {{#post}}
+        <h1>{{title}}</h1>
+        {{content}}
         {{/post}}
-        </div>
+      </div>
     </div>
   </div>
+
+  {{>sidebar}}
 </div>
