--- a/assets/src/styles/components/_navigation.scss
+++ b/assets/src/styles/components/_navigation.scss
@@ -31,7 +31,7 @@
     display: block;
     text-align: center;
     margin: 1rem auto;
-    border-top: 1px solid $color-border;
+    // border-top: 1px solid $color-border;
     border-bottom: 1px dashed $color-border;
   }
 
