feat(video): add video support

--- a/assets/src/styles/_config.scss
+++ b/assets/src/styles/_config.scss
@@ -2,18 +2,17 @@
 // Global fonts
 // ############################################################################
 
-$base-font: 'Noto Serif', serif;
-$base-font-body: 'Noto Serif', serif;
-$base-font-bold: 'Noto Serif', serif;
-$base-font-medium: 'Noto Serif', serif;
-$base-font-heading: 'Sanchez', serif;
+$base-font: 'Overpass', sans-serif;
+$base-font-body: 'Overpass', sans-serif;
+$base-font-bold: 'Overpass', sans-serif;
+$base-font-heading: 'Roboto', sans-serif;
 
 // ############################################################################
 // Typography
 // ############################################################################
 
-$body-font-size: 16px;
-$body-font-size-small: 16px;
+$body-font-size: 18px;
+$body-font-size-small: 14px;
 $heading-line-height: 1.2;
 $body-line-height: 1.4;
 $body-paragraph-max: 768px;
