--- a/assets/src/styles/_patterns.scss
+++ b/assets/src/styles/_patterns.scss
@@ -4,6 +4,7 @@
 
 body {
   @include font;
+  font-size: $body-font-size;
 }
 
 .visually-hidden,
@@ -18,10 +19,10 @@ body {
 p {
   font-family: $base-font-body;
   font-weight: 500;
-  font-size: 1rem;
-  line-height: 1.38;
+  font-size: 1.1rem;
+  line-height: 1.5;
   color: $color-body;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 
   &:last-child {
     margin-bottom: 0;
@@ -30,7 +31,6 @@ p {
   .sal__footer & {
     font-size: 0.75rem;
   }
-
 }
 
 // ############################################################################
