--- a/assets/src/styles/_layout.scss
+++ b/assets/src/styles/_layout.scss
@@ -136,3 +136,17 @@ body {
 
   }
 }
+
+.kg-embed-card {
+  width: 100%;
+
+  iframe {
+    margin: 0 auto;
+    width: 100%;
+    min-height: 250px;
+
+    @include small {
+      min-height: 450px;
+    }
+  }
+}
