--- a/default.hbs
+++ b/default.hbs
@@ -9,7 +9,6 @@
   <meta name="theme-color" content="#ffffff">
 
   <title>{{meta_title}}</title>
-  <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Sanchez&display=swap" rel="stylesheet">
   <style type="text/css">
     .kg-width-wide {}
     .kg-width-full {}
@@ -18,6 +17,7 @@
     .kg-gallery-image {}
   </style>
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;600&family=Roboto&display=swap">
   <link rel="stylesheet" type="text/css" href="{{asset "dist/screen.css"}}" />
   <link rel="icon" type="image/png" sizes="32x32" href="{{asset "dist/images/favicon/favicon-32x32.png"}}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{asset "dist/images/favicon/favicon-16x16.png"}}">
