--- a/assets/src/styles/_ghost.scss
+++ b/assets/src/styles/_ghost.scss
@@ -2,71 +2,23 @@
 // Ghost containers
 // ############################################################################
 
-// .kg-card {
-//   max-width: 100%;
-// }
+// Embedded content, such as videos
+.kg-embed-card {
+  width: 100%;
 
-// .kg-bookmark-card {
-//   border: 1px silid red;
-// }
+  iframe {
+    width: 100%;
+    min-height: 250px;
+    margin: 2rem auto 1rem;
+    border: 3px solid $color-body;
 
-// .kg-bookmark-container {
-//   border: 1px silid red;
-// }
+    @include small {
+      min-height: 450px;
+    }
+  }
+}
 
-// .kg-bookmark-content {
-//   border: 1px silid red;
-// }
-
-// .kg-bookmark-title {
-//   border: 1px silid red;
-// }
-
-// .kg-bookmark-description {
-//   border: 1px silid red;
-// }
-
-// .kg-bookmark-metadata {
-//   border: 1px silid red;
-// }
-
-// .kg-bookmark-icon {
-//   border: 1px silid red;
-// }
-
-// .kg-bookmark-author {
-//   border: 1px silid red;
-// }
-
-// .kg-bookmark-publisher {
-//   border: 1px silid red;
-// }
-
-// .kg-bookmark-thumbnail {
-//   border: 1px silid red;
-// }
-
-// .kg-width-wide {
-//   border: 1px silid red;
-// }
-
-// .kg-width-full {
-//   border: 1px silid red;
-// }
-
-// .kg-gallery-container {
-//   border: 1px silid red;
-// }
-
-// .kg-gallery-row {
-//   border: 1px silid red;
-// }
-
-// .kg-gallery-image {
-//   max-width: 80%;
-//   border: 1px silid red;
-// }
-
+// Uploaded images
 .kg-image-card {
 
   img {
@@ -74,7 +26,7 @@
     width: 60%;
     max-width: 600px;
     margin: 1rem auto 2rem;
-    border: 3px solid $color-black;
+    border: 3px solid $color-body;
 
     @include small {
       width: 90%;
