--- a/assets/src/styles/_layout.scss
+++ b/assets/src/styles/_layout.scss
@@ -3,7 +3,7 @@
 // ############################################################################
 
 body {
-  background-color: $color-white;
+  background-color: $color-background;
   width: 100%;
 }
 
@@ -12,17 +12,17 @@ body {
   width: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  margin: 0;
+  padding: 0;
 
   &__layout {
-    background-color: $color-background;
+    background-color: $color-background-body;
     max-width: 1200px;
     margin: 0 auto;
     padding: 2rem;
   }
 
   &__lane {
-    // width: 100%;
-    // margin-bottom: 3rem;
 
     img {
       max-width: 400px;
@@ -134,19 +134,5 @@ body {
 
   &__excerpt {
 
-  }
-}
-
-.kg-embed-card {
-  width: 100%;
-
-  iframe {
-    margin: 0 auto;
-    width: 100%;
-    min-height: 250px;
-
-    @include small {
-      min-height: 450px;
-    }
   }
 }
