--- a/home.hbs
+++ b/home.hbs
@@ -43,6 +43,11 @@
           <div class="sal-post__excerpt">
             <p>{{excerpt}}</p>
           </div>
+          <div class="sal-post__more">
+            <a href="blog/{{slug}}">
+              Read post
+            </a>
+          </div>
         </div>
       </div>
       {{/has}}
