--- a/partials/sidebar-search.hbs
+++ b/partials/sidebar-search.hbs
@@ -1,8 +1,9 @@
-<section class="sidebar__search">
+<section class="sal-sidebar__search">
   <h3>Search</h3>
   <form>
+    <label for="search-field" class="sr-only">Search</label>
     <input type="text" id="search-field" />
     <button type="submit" class="button button--secondary">Search</button>
   </form>
-  <div id="results" class="sidebar__results"></div>
+  <div id="results" class="sal-sidebar__results"></div>
 </section>
