--- a/home.hbs
+++ b/home.hbs
@@ -41,7 +41,7 @@
             {{/if}}
           </div>
           <div class="sal-post__excerpt">
-            <p>{{excerpt}}</p>
+            <p>{{excerpt}} ...</p>
           </div>
           <div class="sal-post__more">
             <a href="blog/{{slug}}">
