feat(social): add social support

--- a/assets/src/styles/_colors.scss
+++ b/assets/src/styles/_colors.scss
@@ -24,7 +24,7 @@ $color-navigation-bg: $color-shade1;
 // COPY
 $color-headings: $color-shade1;
 $color-body-text: $color-shade2;
-$color-border: $color-shade2;
+$color-border: $color-alt1;
 
 // LINKS
 $color-link1: #fd3b7a;
