--- a/assets/src/styles/components/_sidebar.scss
+++ b/assets/src/styles/components/_sidebar.scss
@@ -10,57 +10,52 @@
     border-left: 1px dashed $color-border;
   }
 
-  &__logo {
-    max-width: 64px;
-    margin: 0 auto;
-
-    @include small {
-      max-width: 128px;
-    }
-  }
-
-  &__title {
-    padding: 0.5rem 0;
-    text-align: center;
-
-    h2 {
-      font-size: 1.5rem;
-    }
+  h3 {
+    font-size: 1.1rem;
+    text-transform: uppercase;
   }
 
   &__section {
-    border-top: 1px solid $color-border;
+    border-bottom: 1px solid $color-border;
     margin-bottom: 2rem;
-    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  &__inner {
+    margin: 0 1rem;
   }
 
   form {
     width: 100%;
-
-    @include medium {
-      display: flex;
-    }
   }
 
   input {
     width: 100%;
     border: 1px solid black;
-    font-size: 1.1rem;
+    font-size: 1rem;
     padding: 0.5rem;
-
-    @include medium {
-      width: 60%;
-    }
+    border-radius: 4px;
   }
 
   button {
-    margin-top: 1rem;
+    display: block;
+    margin: 4px auto;
+    padding: 8px 1rem;
+    background-color: $color-shade2;
+    font-size: 1rem;
+    color: $color-light1;
+    border-radius: 2rem;
+    border: 1px solid $color-shade2;
+    transition: $animation-speed;
+    cursor: pointer;
 
-    @include medium {
-      width: 40%;
-      margin-top: 0;
-      margin-left: 1rem;
+    &:hover,
+    &:active {
+      background-color: $color-light1;
+      border: 1px solid $color-shade2;
+      color: $color-shade1;
     }
+
   }
 
   &__search {
@@ -101,24 +96,31 @@
     }
   }
 
-  &__tags {
+  &__posts {
 
-    .tags {
+  }
 
-      li {
-        padding-bottom: 1rem;
+  &__social {
+
+    .sal-sidebar__inner {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    a {
+      display: inline-block;
+      margin: 0 1rem;
+      width: 3rem;
+      height: 3rem;
+      border: 2px solid $color-shade2;
+      border-radius: 50%;
+      padding: 1rem;
+      background-color: $color-alt1;
+
+      img {
+        width: 100%;
       }
     }
   }
 
-  &__newsletter {
-    padding: 1rem;
-    margin-right: 1rem;
-    background-color: $color-brand;
-
-    h3, p {
-      color: $color-white;
-      text-align: left;
-    }
-  }
 }
